<resources>
    <string name="app_name">• МОЗГО •\nломки</string>
    <string name="banner_ad_unit_id">ca-app-pub-9188008799728984/3543487752</string>
    <string name="banner_ad_unit_id_answer">ca-app-pub-9188008799728984/1523306959</string>





    <string name="title_activity_puzzle">PuzzleActivity</string>







    <string name="lib_name">Alerter</string>
    <string name="msg.alert_cleared">Alert Cleared</string>
    <string name="msg.no_alert_showing">No Alert Showing</string>



    <string name="apprater_dialog_title">Оценить приложение</string>
    <string name="apprater_rate_message">Понравилось приложение?\nОцените приложение и оставьте отзыв.\nВаш отзыв очень важен для меня!</string>
    <string name="apprater_rate">ОЦЕНИТЬ</string>
    <string name="apprater_later">ПОЗЖЕ</string>
    <string name="apprater_no_thanks">НИКОГДА</string>



    <string name="title_activity_main">MainActivity</string>
    <string name="activity_main_title">|||||||МОЗГОЛОМКИ|||||||</string>
    <string name="activity_main_button_last">ЗАКЛАДКА</string>
    <string name="activity_main_button_favorites">ИЗБРАННОЕ</string>
    <string name="activity_main_button_settings">НАСТРОЙКИ</string>
    <string name="activity_main_button_about">ПОМОЩЬ</string>

    <string name="activity_main_item_title">ЗАГОЛОВОК</string>
    <string name="activity_main_item_number">1234.</string>
    <string name="activity_main_item_state">ПРОЧИТАНА</string>
    <string name="activity_main_item_description">Пример текста\nдля разметки\nстрока3</string>
    <string name="activity_main_item_complexity">ТЯЖЕЛАЯ</string>
    <string name="activity_main_item_favorite">★</string>


    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_settings_title">||||||||НАСТРОЙКИ||||||||</string>
    <string name="activity_settings_switch_to_last">АВТОМАТИЧЕСКИ ОТКРЫВАТЬ\nГОЛОВОЛОМКУ С ЗАКЛАДКОЙ\nПРИ ЗАПУСКЕ ПРИЛОЖЕНИЯ</string>
    <string name="activity_settings_switch_text_align">ВЫРАВНИВАНИЕ ТЕКСТА\nПО ЦЕНТРУ</string>
    <string name="activity_settings_button_reset_settings">СБРОСИТЬ НАСТРОЙКИ</string>
    <string name="activity_settings_switch_sorting">Сортировать список\nпо возрастанию</string>
    <string name="activity_settings_switch_text_size">УВЕЛИЧИТЬ РАЗМЕР ШРИФТА\n(будет добавлено в след. обновлении)</string>
    <string name="activity_settings_switch_night_theme">НОЧНОЙ РЕЖИМ\n(будет добавлено в след. обновлении)</string>


    <string name="activity_about_title">||||||||ПОМОЩЬ||||||||</string>
    <string name="activity_about_copyright">© А.М. Шишкин, 2017</string>
    <string name="activity_about_app_version">Версия приложения: 1.0.0</string>
    <string name="activity_about_button_email">АВТОРУ</string>
    <string name="activity_about_button_other_app">ОТ АВТОРА</string>
    <string name="activity_about_button_rate">ОЦЕНИТЬ</string>
    <string name="activity_about_description">Что-то не работает?\nСчитаете говоломку «глупой»?\nУ Вас есть интересная загадка и Вы хотите поделиться ей с миром?\n\nНапишите мне!</string>
    <string name="activity_puzzle_button_add">ДОБАВИТЬ</string>
    <string name="activity_puzzle_button_share">ОТПРАВИТЬ</string>
    <string name="activity_puzzle_button_advice">ПОДСКАЗКА</string>
    <string name="activity_puzzle_button_answer">◦ОТВЕТ◦</string>
    <string name="activity_puzzle_fragment_favorite">*</string>
    <string name="activity_puzzle_fragment_title">TXT</string>
    <string name="activity_puzzle_fragment_description">Нет текста</string>
    <string name="activity_puzzle_fragment_complexity">СЛОЖНО</string>
    <string name="activity_answer_description">Нет текста</string>
    <string name="activity_answer_title">|||||||ПОМОЩЬ|||||||</string>
    <string name="activity_answer_button_answer">ОТВЕТ</string>
    <string name="activity_answer_button_share">ОТПРАВИТЬ</string>


</resources>
