<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:multiprocess="true"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/puzzle_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="2"
                android:fontFamily="serif"
                android:gravity="start"
                android:text="@string/activity_puzzle_fragment_favorite"
                android:textColor="#000000"
                android:textSize="@dimen/puzzle_fragment_favorite_text_size"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/section_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/activity_puzzle_fragment_title"
                android:textColor="#000000"
                android:textSize="@dimen/puzzle_fragment_title_text_size"/>

            <TextView
                android:id="@+id/puzzle_complexity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="2"
                android:gravity="end"
                android:fontFamily="serif"
                android:text="@string/activity_puzzle_fragment_complexity"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/puzzle_fragment_complexity_text_size"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/puzzle_fragment_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/scrollbar"
                    tools:ignore="ContentDescription" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewFragmentPuzzle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:scrollbars="none"
                    android:text="@string/activity_puzzle_fragment_description"
                    android:textColor="#000000"
                    android:textSize="@dimen/puzzle_fragment_main_text_size"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </ScrollView>


</LinearLayout>
